Fix wrapping of columns

--- a/css/base.css
+++ b/css/base.css
@@ -1913,3 +1913,19 @@ html {
 .hero-bg {
   background-image: url('../img/modules.png') bottom center repeat-x;
 }
+
+@media (min-width: 40em) {
+  .sm-half:nth-child(2n+2) {
+    clear: both;
+  }
+}
+
+@media (min-width: 64em) {
+  .sm-half:nth-child(2n+2) {
+    clear: none;
+  }
+
+  .lg-third:nth-child(3n+2) {
+    clear: both;
+  }
+}
